# hostedwallet-server-staging

contrib/epee/include/: span.h
src/: CMakeLists.txt  cryptonote_config.h
src/common/: CMakeLists.txt  download.cpp  error.cpp  error.h  expect.cpp  expect.h
src/crypto/: chacha.h  crypto-ops.c  slow-hash.c
src/cryptonote_basic/: cryptonote_format_utils.cpp
src/cryptonote_core/: cryptonote_tx_utils.cpp  cryptonote_tx_utils.h
src/device/: device_default.cpp  device_default.hpp
src/light_wallet_server/: CMakeLists.txt  account.cpp  account.h  admin_main.cpp  error.cpp  error.h  fwd.h  json.cpp  json.h  rates.cpp  rest_server.cpp  rest_server.h  rpc.cpp  rpc.h  scanner.cpp  scanner.h  server_main.cpp
src/light_wallet_server/db/: CMakeLists.txt  data.h  fwd.h  storage.cpp  storage.h  string.cpp
src/lmdb/: CMakeLists.txt  database.cpp  database.h  error.cpp  error.h  key_stream.h  table.cpp  table.h  transaction.h  util.h  value_stream.h
src/rpc/: daemon_handler.cpp  message_data_structs.h
src/serialization/: CMakeLists.txt  json_object.cpp
src/serialization/new/: json_core.cpp  json_core.h  json_error.cpp  json_error.h  json_input.h  json_output.h
src/wallet/: wallet2.cpp
tests/unit_tests/: CMakeLists.txt  epee_utils.cpp
